# turso-client-php

./: .dockerignore  .env.vault  .gitignore  Cargo.toml  Cross.toml  Cross_php-8.0.toml  Cross_php-8.1.toml  Cross_php-8.2.toml  Cross_php-8.3.toml  Cross_php-8.4.toml  Dockerfile  Dockerfile.arm64  Makefile  README.md  compose.yaml  composer.json  flake.nix  libsql_php_extension.stubs.php  release_metadata.json  test.php  versioning
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
cross/: Cross_php-8.0.toml  Cross_php-8.3.toml  Cross_php-8.4.toml
docs/: 000-configuration.md  001-local-connection.md  002-memory-connection.md  002-remote-connection.md  003-memory-connection.md  003-remote-connection.md  004-remote-replica-connection.md  005-LibSQL-class.md  005-libsql-class.md  006-version.md  007-changes.md  008-isAutocommit.md  009-execute.md  010-executeBatch.md  011-query.md  012-transaction.md  013-prepare.md  014-close.md  015-LibSQLStatement.md  015-sync.md  016-LibSQLStatement.md  016-LibSQLTransaction.md  017-LibSQLTransaction.md  LibSQL-class.md  README.md  WINDOWS_REQUIREMENT.md  configuration.md  embedded-replica-connection.md  introduction.md  local-connection.md  memory-connection.md  offline-writes-sqld-connection.md  offline-writes-turso-connection.md  quick-start.md  remote-connection.md
example/: index.php
examples/: 003-remote-connection.php  006-version.php  008-isAutocommit.php  009-execute.php  010-executeBatch.php  011-query.php  012-transaction.php  013-prepare.php  composer.json  local.php  memory.php  offline-writes.php  remote-replica.php  remote.php
php-server/: php.ini
scripts/: release_metadata.py
src/: Driver.php  Exception.php  LibSQLDriverServiceProvider.php  LibSQLManager.php  Result.php  generator.rs  lib.rs  result.rs  (+3 more)
(+112 files in other folders)
