[package]
name = "libsql_php"
version = "1.2.6"
edition = "2021"
authors = ["Imam Ali Mustofa <darkterminal@duck.com>"]

[lib]
name = "libsql_php"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
ext-php-rs = "*"
lazy_static = "1.4.0"
libsql = { version = "0.3.5", features = ["remote", "replication", "core", "encryption"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
tokio = "1.37.0"
uuid = "1.8.0"
