[package]
name = "libsql_php"
version = "1.6.0"
edition = "2021"
authors = ["Imam Ali Mustofa <darkterminal@duck.com>"]

[lib]
name = "libsql_php"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.0"
ext-php-rs = "0.13.1"
lazy_static = "1.4.0"
libsql = { git = "https://github.com/tursodatabase/libsql.git", branch = "main", features = ["encryption"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
tokio = "1.37.0"
uuid = "1.8.0"
