[package]
name = "libsql_php"
version = "1.6.2"
edition = "2021"
authors = ["Imam Ali Mustofa <darkterminal@duck.com>"]

[lib]
name = "libsql_php"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
ext-php-rs = "0.13.1"
lazy_static = "1.4.0"
libsql = { version = "0.9.19", features = ["core", "replication", "remote", "sync", "tls", "encryption"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokio = "1.47.1"
url = "2.5.4"
uuid = "1.17.0"
